# FastAPI-Master-Class

./: .gitignore  Readme.md  mongodb-compose.yml
1-Zero2Junior(0 to 4)/: Dockerfile  Dockerfile.simple  main.py  pyproject.toml
1-Zero2Junior(0 to 4)/02/jinja/: api.py  model.py  todo.py
1-Zero2Junior(0 to 4)/02/jinja/templates/: home.html  todo.html
1-Zero2Junior(0 to 4)/02/path/: models.py  todo.py
1-Zero2Junior(0 to 4)/02/routing/: api.py  models.py  todo.py
1-Zero2Junior(0 to 4)/03/: main.py
1-Zero2Junior(0 to 4)/03/models/: events.py  users.py
1-Zero2Junior(0 to 4)/03/routes/: events.py  users.py
1-Zero2Junior(0 to 4)/04/databases/NoSQL/: .env  main.py
1-Zero2Junior(0 to 4)/04/databases/SQL/: main.py  planner.db
1-Zero2Junior(0 to 4)/04/security/: .env
1-Zero2Junior(0 to 4)/04/security/auth/: authenticate.py  hash_password.py
1-Zero2Junior(0 to 4)/04/security/models/: events.py  users.py
1-Zero2Junior(0 to 4)/04/security/routes/: events.py  users.py
1-Zero2Junior(0 to 4)/04/testing/: conftest.py
2-Junior2Senior(5 to 13)/: Dockerfile  main.py  pyproject.toml
2-Junior2Senior(5 to 13)/05/: main.py
2-Junior2Senior(5 to 13)/06/: main.py
2-Junior2Senior(5 to 13)/06/admin/: manager.py
2-Junior2Senior(5 to 13)/06/feedback/: post.py
2-Junior2Senior(5 to 13)/06/login/: user.py
2-Junior2Senior(5 to 13)/06/places/: destination.py
2-Junior2Senior(5 to 13)/06/tourist/: visit.py
2-Junior2Senior(5 to 13)/07/: main.py
2-Junior2Senior(5 to 13)/07/api/: admin.py  admin_mcontainer.py  complaints.py  keywords.py  login.py  posts.py  users.py
2-Junior2Senior(5 to 13)/07/dependencies/: global_transactions.py  posts.py  users.py
2-Junior2Senior(5 to 13)/07/model/: recipes.py  users.py
2-Junior2Senior(5 to 13)/07/repository/: posts.py  recipes.py
2-Junior2Senior(5 to 13)/08/faculty/: main.py
2-Junior2Senior(5 to 13)/08/main/: main.py
2-Junior2Senior(5 to 13)/08/student/: main.py
(+30 files in other folders)
