[tool.poetry]
name = "fastapi-junior"
version = "2.0.0"
description = ""
authors = ["SoroushMoosapour <s75moosapour@gmail.com>"]
license = "MIT"
# readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
jinja2 = "^3.1.3"
sqlmodel = "^0.0.16"
beanie = "^1.25.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
coverage = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
